# Clyre

./: .dockerignore  .gitignore  Dockerfile.api  Dockerfile.web  README.md  docker-compose.yml  env.d.ts  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  pyproject.toml  requirements.txt  run-desktop.py  run.py  tsconfig.app.json  vite.config.mts
api/: app.py  db.py  main.py
api/crud/: __init__.py  message.py  thread.py
api/models/: __init__.py  base.py  file.py  message.py  project.py  role.py  thread.py
api/pipelines/: __init__.py  llama.py
api/routes/: __init__.py  views.py
api/schemas/: auth.py  chatting.py  general.py  thread.py  user.py
api/services/: connection.py  thread.py
api/utils/: __init__.py  base.py  cfg.py  downloader.py  env.py  web.py
backend/: .pylintrc  app.py  cfg.py  db.py  downloader.py  endpoints.py  line_counter.py  manager.py  pyproject.toml  requirements.txt
backend/api/: __init__.py  schemas.py  views.py
backend/api/auth/: __init__.py  views.py
backend/api/chatting/: __init__.py  schemas.py  services.py  views.py
backend/api/thread/: views.py
backend/api/user/: __init__.py  views.py
backend/configs/: base.env  binaries.yaml  inference.yaml  models.yaml  platform.yaml
backend/crud/: __init__.py  message.py  thread.py  user.py
backend/models/: __init__.py  base.py  file.py  message.py  project.py  role.py  social.py  thread.py  user.py
backend/pipelines/: llama.py
backend/schemas/: __init__.py  auth.py  chatting.py  general.py
backend/services/: auth.py  chat.py  chatting.py  connection.py  thread.py  user.py
backend/utils/: __init__.py  base.py  cfg.py  downloader.py  env.py  fields.py  hashing.py  timing.py  web.py
configs/: base.env  binaries.yaml  inference.yaml  models.yaml  platform.yaml
frontend/: env.d.ts  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.mts
frontend/src/: App.vue  components.d.ts  main.ts
scripts/: build_db_url.py  downloader.py  llama_launcher.py
scripts/utils/: cfg.py
shared/pyutils/: __init__.py  base.py  env.py  logs.py
telegram-bot/: .env.schema  main.py
web/: components.d.ts
web/pages/: chat.vue
web/repos/: auth.ts
web/router/: index.ts
web/stores/: thread.ts  user.ts
(+31 files in other folders)
